@@ -1,7 +1,8 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<addon id="plugin.video.dr.dk.bonanza" version="3.1.0" name="DR.dk Bonanza" provider-name="twinther">
+<addon id="plugin.video.dr.dk.bonanza" version="3.1.0" name="DR.dk Bonanza" provider-name="termehansen">
     <requires>
         <import addon="xbmc.python" version="2.14.0"/>
+        <import addon="script.module.requests-cache" version="0.4.13"/>
         <import addon="script.module.simplejson" version="2.0.10"/>
         <import addon="script.module.buggalo" version="1.1.2"/>
     </requires>
@@ -18,8 +19,9 @@
         <license>GPL 2.0</license>
         <platform>all</platform>
         <language>da</language>
-        <email>tommy@winther.nu</email>
-        <website>http://tommy.winther.nu</website>
+        <email>termopeten@gmail.com</email>
+        <website>https://www.dr.dk/bonanza</website>
+        <forum>https://forum.kodi.tv/</forum>
         <source>https://github.com/xbmc-danish-addons/plugin.video.dr.dk.bonanza</source>
     </extension>
 </addon>
