@@ -1,3 +1,7 @@
+[B]Version 3.2.0 - 2020-11-26[/B]
+- Updated addon to match website changes
+- Moving "ownership" of the addon, hence Tommy have stopped developing on the addon.
+
 [B]Version 3.1.0 - 2017-03-18[/B]
 - Updated addon to match website changes
 
